# dotemacs

./: .gitignore  Cask  LICENSE  README.md  README.org  custom.el  dotemacs  init.el  init.org  test-emacs.sh
local/: mdx-mode.el
local-packages/: file-utils.el  personal.el  string-utils.el
local-packages/tests/: test-string-utils.el
org-templates/: contact-friend.org  house-project.org  project-notes.org  recipe.org
project-skeletons/cpp-project/: Makefile.am  configure.ac
project-skeletons/cpp-project/config/: ax_cxx_compile_stdxx_11.m4
project-skeletons/cpp-project/doc/: __PROJECT-NAME__.org  fdl-1.3.texi
project-skeletons/cpp-project/src/: Makefile.am  main.cc
site-lisp/: #init-paren-face.el#  .#init-paren-face.el  init-appearance.el  init-auto-complete.el  init-company.el  init-elfeed.el  init-elisp.el  init-flycheck.el  init-flyspell.el  init-folding.el  init-ggtags.el  init-helm.el  init-ielm.el  init-irony.el  init-ledger.el  init-magit.el  init-mc.el  init-openscad.el  init-org-fc.el  init-org.el  init-origami.el  init-paredit.el  init-paren-face.el  init-programming.el  init-projectile.el  init-semantic.el  init-skeletor.el  init-slime.el  init-treeview.el  init-yasnippet.el  org-R.el
snippets/c++-mode/: newheader.yasnippet  newsource.yasnippet
snippets/emacs-lisp-mode/: newel.yasnippet
snippets/js-mode/: headerlic  headerlic.yasnippet
snippets/lua-mode/: awesome-widget.snippet  headerlic.yasnippet  newblock.yasnippet  newfunction.yasnippet  projectlic.yasnippet
snippets/makefile-mode/: newmakefile.yasnippet
(+3 files in other folders)
